# SpaceGame

./: .gitignore  CLAUDE.md  GALAXY_GUIDE.md  MINING_IMPLEMENTATION.md  README.md  SETUP_COMPLETE.md  TRADING_GUIDE.md  install.bat  play.bat  pyproject.toml  run.bat  run.py  spacegame.spec
data/: factions.json
data/assets/: sprite_manifest.json
data/auctions/: crimson_reach_lots.json  crimson_reach_voices.json  stellaris_lots.json  stellaris_voices.json
data/characters/: npcs.json
data/combat/: captain_variants.json  captains.json  complications.json  crew_interjections.json  enemies.json  ultimates.json
data/crew/: ambient_dialogue.json  crew_members.json  station_chatter.json
data/dialogue/: crew_quest_dialogues.json  dialogues.json
data/economy/: balance.json  commodities.json  faction_laws.json  forge_upgrades.json  galaxy_events.json  investment_configs.json  mining_configs.json  mining_upgrades.json  news_templates.json  recipes.json  salvage_configs.json  salvage_upgrades.json
data/encounters/: campaign.json  ce4_pressure.json  ce4_variety.json  commerce_guild.json  encounters.json  frontier_alliance.json  generic.json  humor.json  lore.json  miners_union.json  science_collective.json  system_specific.json
data/galaxy/: locations.json  systems.json
data/ground/: contract_templates.json  equipment.json
data/journal/: entries.json  travel_log_templates.json
data/missions/: crew_quests.json  missions.json  sa_2_pilgrimage.json  sa_r2_okafor_legacy.json  sa_v_investment_intro.json  side_missions.json
data/politics/: alliance_disputes.json  faction_relationships.json  reach_disputes.json  verdant_disputes.json
data/progression/: achievements.json  faction_perks.json  skill_trees.json  timed_threads.json
data/salvage/: derelict_stories.json
data/ships/: drydock_catalogs.json  materials.json  module_materials.json  modules.json  parts.json  shapes.json  ship_types.json  slot_definitions.json  upgrades.json
docs/: ARCHITECTURE.md  GALAXY_EXPANSION.md  IMAGE_SETUP.md  MINING_SYSTEM.md  PROGRESSION_SYSTEM.md  REFINING_SYSTEM.md  SALVAGE_SYSTEM.md  SHIP_UPGRADES.md
plans/: phase-f-ground-content-polish.md
ralph/: README.md  __init__.py  agents.py  config.py  harness.py  roadmap_state.py
ralph/prompts/: implement.md  plan.md  review.md
requirements/: 01_game_design_document.md  04_ships_and_fleet.md  05_player_progression.md  06_ui_ux.md  09_coding_principles.md  10_campaign_rpg_crew.md  11_implementation_roadmap.md  14_smuggling_contraband.md  15_visual_overhaul.md  16_refinement_roadmap.md  17_ships_and_upgrades.md  act_one_reference.md  agent_principles.md  arna_campaign.md  aurelia_voice_examples.md  campaign_act_one.md  cb_scope.md  character_voices.md  combat_balance_design.md  combat_overhaul.md  cultural_guide.md  dialogue_writing_guide.md  enemy_sprite_generation.md  first_session_pacing.md  game_systems.md  good_to_great_roadmap.md  graphics_overhaul.md  investment_rewards_design.md  journal_system.md  living_universe_arc.md  mining_overhaul.md  narrative_refinements.md  nv_audit.csv  nv_audit_findings.md  onboarding_design.md  playtest_roadmap.md  qa_pass_1_audit.md  qa_pass_2_findings.md  qa_pass_3_5_findings.md  qa_pass_3_findings.md  (+50 more)
requirements/archive/: 02_economic_system.md  03_galaxy_map.md  07_technical_architecture.md  08_content_requirements.md  11_implementation_roadmap.md  12_minigame_overhaul.md  13_ground_exploration.md  16_refinement_roadmap.md  act_one_narrative.md  builder_polish_roadmap.md  campaign_act_one.md  combat_balance_roadmap.md  combat_overhaul.md  qa_audit.md  (+10 more)
scripts/: convert_modules_to_parts.py  convert_upgrades_to_parts.py  fix_encounter_dashes.py  qa_fix_captain_spawns.py
spacegame/: achievement_manager.py  config.py  data_loader.py  main.py  save_manager.py  tutorial_manager.py
tests/: conftest.py  test_launcher.py  test_table_widget.py  test_tutorial.py  test_writing_bible_compliance.py
tools/: assign_subsystems.py  benchmark_composite_rebuild.py  build.py  generate_commodities.py  generate_ground_sprites.py  generate_icon.py  generate_music.py  generate_sfx.py  generate_sprites.py  generate_status_icons.py  generate_system_portraits.py  generate_trial.py  nv_audit.py  pixel_pipeline.py  reprocess_sprites.py  sprite_gen.py  sprite_sheet_gen.py  validate_quests.py
(+682 files in other folders)
