[project]
name = "spacegame"
version = "0.1.0"
description = "A narrative-driven space trading RPG"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.5.0",
    "pygame-gui>=0.6.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "pylint>=3.0.0",
    "mypy>=1.5.1",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pylint.messages_control]
max-line-length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
