[project]
name = "spacegame"
version = "0.1.0"
description = "A narrative-driven space trading RPG set in the Aurelia Expanse"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.13"
keywords = ["rpg", "trading", "space", "pygame", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pygame-ce>=2.5.0",
    "pygame-gui>=0.6.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "pylint>=3.0.0",
    "mypy>=1.5.1",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pylint.messages_control]
max-line-length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
